@@ -1,10 +1,10 @@
-From: Michael Biebl <biebl@debian.org>
-Date: Wed, 20 Aug 2014 23:52:47 +0200
-Subject: Stop syslog.socket when entering emergency mode
+From: Martin Pitt <martin.pitt@ubuntu.com>
+Date: Wed, 27 Apr 2016 10:34:24 +0200
+Subject: Stop syslog.socket when entering emergency mode (#3130)
 
-When rsyslog is installed, the syslog.socket is active when entering emergency
-mode. Any log message then triggers the start of rsyslog.service (or other
-implementation) along with its dependencies such as local-fs.target and
+When enabling ForwardToSyslog=yes, the syslog.socket is active when entering
+emergency mode. Any log message then triggers the start of rsyslog.service (or
+other implementation) along with its dependencies such as local-fs.target and
 sysinit.target. As these might fail themselves (e. g. faulty /etc/fstab), this
 breaks the emergency mode.
 
@@ -14,10 +14,7 @@ Transition is destructive".
 Add Conflicts=syslog.socket to emergency.service to make sure the socket is
 stopped when emergency.service is started.
 
-(This is a consequence of Re-enable-journal-forwarding-to-syslog.patch)
-
-Closes: #755581
-Forwarded: https://github.com/systemd/systemd/issues/266
+Fixes #266
 ---
  units/emergency.service.in | 1 +
  1 file changed, 1 insertion(+)
