@@ -32,6 +32,7 @@ Install-correctly-report-symlink-creations.patch
 Mark-nbd-as-inactive-until-connected-2422.patch
 tmp.mount.hm4-After-swap.target-3087.patch
 path-util-Add-hidden-suffixes-for-ucf-3131.patch
+Stop-syslog.socket-when-entering-emergency-mode-3130.patch
 debian/Use-Debian-specific-config-files.patch
 debian/don-t-try-to-start-autovt-units-when-not-running-wit.patch
 debian/Make-logind-hostnamed-localed-timedated-D-Bus-activa.patch
@@ -47,7 +48,6 @@ debian/Revert-udev-network-device-renaming-immediately-give.patch
 debian/Use-different-default-paths-for-various-binaries.patch
 debian/Adjust-systemd-user-pam-config-file-for-Debian.patch
 debian/Add-support-for-TuxOnIce-hibernation.patch
-debian/Stop-syslog.socket-when-entering-emergency-mode.patch
 debian/Include-additional-directories-in-ProtectSystem.patch
 debian/Re-enable-journal-forwarding-to-syslog.patch
 debian/Don-t-enable-audit-by-default.patch
